--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+
+================================================================================
+ v1.1.1
+================================================================================
+Added: Expiration option, expires works with minutes,
+  or you can send a datetime and set the option
+  `isExpiresDate` to true.
+
 ================================================================================
  v1.1.0
 ================================================================================
